deploy/internal/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: admission-validation-webhook
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
webhooks:
  - name: admissionwebhook.noobaa.io
    matchPolicy: Equivalent
    rules:
    - apiGroups:   ["noobaa.io"]
      apiVersions: ["v1alpha1"]
      operations:  
      - "CREATE" 
      - "UPDATE"
      - "DELETE"
      resources:   ["backingstores"]
      scope:       "Namespaced"
    - apiGroups:   ["noobaa.io"]
      apiVersions: ["v1alpha1"]
      operations:  
      - "CREATE" 
      - "DELETE"
      resources:   ["namespacestores, bucketclasses"]
      scope:       "Namespaced"
    sideEffects: None
    clientConfig:
      service:
        name: noobaa-operator-service
        namespace: placeholder
        path: "/validate"
      caBundle:
    admissionReviewVersions: ["v1", "v1beta1"]
    failurePolicy: Ignore
    timeoutSeconds: 5
